# fcitx5-voice-input

./: .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  README.md  README.zh-CN.md  TASKS.md
.github/actions/aur/: Dockerfile  action.yml  prepare.sh
.github/workflows/: aur-release.yml  build.yml  release.yml
aur/: PKGBUILD
data/inputmethod/: voiceinput.conf
docs/architecture/: v4-asr-session-model.md
docs/dev/: out-of-scope.md
docs/prd/: add-input-method-icon.md
docs/reviews/: 2026-07-05-architecture-review.md
po/: zh_CN.po
scripts/: build.sh  install.sh
src/addon/: engine.cpp  engine.h  types.h  voiceinput.conf.in
src/addon/asr/: asr_engine.cpp  asr_engine.h  asr_session.h  openai_asr.cpp  openai_asr.h  session_reaper.cpp  session_reaper.h  sherpa_asr.cpp  volcengine_asr.cpp  volcengine_asr.h
src/addon/capture/: audio_capture.h  pipewire_capture.cpp  pipewire_capture.h  pulse_audio_capture.cpp  pulse_audio_capture.h
src/addon/config/: config.h  voiceinput-config.h
src/addon/llm/: llm_client.cpp  llm_client.h
src/addon/pipeline/: pipeline.cpp  pipeline.h
src/addon/utils/: audio_buffer.h  thread_safe_queue.h
src/addon/vad/: silero_vad.cpp  silero_vad.h  vad.cpp  vad.h
